Edited  html for testing and added images.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="top-container">
+    <img src="images/cloud.png">
     <h1>I'm Denden</h1>
     <p>a programmer</p>
-    <h1>test</h1>
   </div>
   <div class="middle-container">
   </div>
